--- a/sample/css/style01.css
+++ b/sample/css/style01.css
@@ -1,6 +1,6 @@
 
 html,body,#contents,.wrapper,#back{
-  background-color: #001219;
+  background-color: #332404;
   height: 100%;
   width: 100%;
   position: relative;
@@ -15,7 +15,7 @@ li{
 }
 
 img{
-  max-width: 100%;
+  max-width: 120%;
 }
 
 header{
@@ -56,12 +56,14 @@ header ul li{
   overflow: hidden;
 }
 
+
+
 #back{
-  background-image: url(../images/spaceback.png);
+  background-image: url(../images/white.png);
   background-size: cover;
   background-position: center 100px;
   top: 0;
-  top:90%;
+  top:100%;
   transition: 2s all;
 }
 
@@ -69,36 +71,11 @@ header ul li{
   top: 0%;
 }
 
-#person{
-  position: absolute;
-  top:200px;
-  right: -100px;
-  width: 100px;
-  transition: 0.6s all;
-}
-
-#person.anime{
-  right: 10px;
-}
-
-
-#car{
-  position: absolute;
-  bottom:100px;
-  max-width: 40%;
-  left: -250px;
-  width: 250px;
-  transition: 0.6s all;
-}
-
-#car.anime{
-  left: 0px;
-}
 
 #food{
   width: 50%;
   bottom: 10%;
-  margin-left: -25%;
+  margin-left: -27%;
   left: 50%;
   position: absolute;
   opacity: 0;
@@ -117,12 +94,12 @@ header ul li{
   position: fixed;
   display: flex;
   z-index: 101;
-  background-color: #000;
+  background-color: rgb(255, 255, 255);
   width: 100%;
   height: 100%;
-  color: #fff;
+  color: rgb(0, 0, 0);
   font-family: serif;
-  font-size: 20px;
+  font-size: 50px;
   align-items: center;
   justify-content: center;
   top: 0;
